<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MatchDetailActivity">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:cardBackgroundColor="#7FBEDF"
        app:cardCornerRadius="3dp"
        app:cardElevation="3dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:stretchColumns="2">
            <TableRow>
                <TextView
                    android:text="@string/team_1"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textColor="#000"
                    android:layout_column="0"/>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:id="@+id/team1Tv"

                    android:layout_weight="1"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/team_2"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textColor="#000"
                    android:layout_column="0"/>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:id="@+id/team2Tv"
                    android:layout_weight="1"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/match_status"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textColor="#000"
                    android:layout_column="0"/>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:id="@+id/matchStatusTv"
                    android:layout_weight="1"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/score"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textColor="#000"
                    android:layout_column="0"/>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:id="@+id/scoreTv"
                    android:layout_weight="1"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/description"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textColor="#000"
                    android:layout_column="0"/>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:id="@+id/descriptionTv"

                    android:layout_weight="1"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/date"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textColor="#000"
                    android:layout_column="0"/>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:id="@+id/dateTv"
                    android:layout_weight="1"/>
            </TableRow>
        </TableLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>